feat: introduce cloud v2